Add soft deactivation for employees
